fix(chat-list): use scrollbar-thin mixin and fix empty state template

--- a/src/app/internal-layout/components/chat-list/chat-list.component.scss
+++ b/src/app/internal-layout/components/chat-list/chat-list.component.scss
@@ -1,3 +1,5 @@
+@use 'styles/mixins';
+
 :host {
   display: flex;
   flex: 1;
@@ -10,18 +12,7 @@
 .chat-viewport {
   flex: 1;
 
-  &::-webkit-scrollbar {
-    width: 4px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: var(--border);
-    border-radius: 2px;
-  }
+  @include mixins.scrollbar-thin;
 }
 
 .chat-item-wrapper {
